# DRHM

./: .gitignore  CLAUDE.md  demo.py  pyproject.toml  requirements.txt
docs/: Architectural Blueprint for an Abhidhamma Grounded Neuromorphic Agent Integrating Active Inference, Spiking Neural Networks, and Sleep-Phase Consolidation.md  The Architecture of "X" Moving Beyond Language to Sub Symbolic Cognitive Primitives in Artificial Intelligence.md  The Architecture of Transcendence Grounding the Pre Linguistic Cognitive Unit in the Abhidhamma Framework.md  implementation phases.md
drhm/: __init__.py  config.py
drhm/attention/: __init__.py  focus.py  frontend.py  salience.py
drhm/citta/: __init__.py  cetasikas.py  types.py  vedana.py
drhm/inference/: __init__.py  active_inference.py  javana.py
drhm/recording/: __init__.py  session.py
drhm/semantics/: __init__.py  conceptors.py  conceptual_space.py  vsa.py
drhm/sensory/: __init__.py  audition.py  events.py  touch.py  vision.py  vocalization.py
drhm/snn/: __init__.py  bhavanga.py  citta_vithi.py  mano_dvara_vithi.py  neurons.py
tests/attention/: test_focus.py  test_frontend.py  test_salience.py
tests/citta/: test_cetasikas.py  test_types.py  test_vedana.py
tests/inference/: test_active_inference.py  test_javana.py
tests/recording/: test_session.py
tests/semantics/: test_conceptors.py  test_conceptual_space.py  test_vsa.py
tests/sensory/: test_audition.py  test_digital.py  test_events.py  test_perturbation.py  test_touch.py  test_vision.py  test_vocalization.py
tests/snn/: test_bhavanga.py  (+3 more)
(+5 files in other folders)
